@@ -77,6 +77,7 @@
 #define INTERNAL_DECODER_AMR            INTERNAL_FILTERS_ENABLED
 #define INTERNAL_DECODER_ADPCM          INTERNAL_FILTERS_ENABLED
 #define INTERNAL_DECODER_FLAC           INTERNAL_FILTERS_ENABLED
+#define INTERNAL_DECODER_OPUS           INTERNAL_FILTERS_ENABLED
 
 // Internal video decoders
 #define INTERNAL_DECODER_MPEG1          INTERNAL_FILTERS_ENABLED
@@ -116,7 +117,8 @@
 #define HAS_AUDIO_DECODERS \
     (INTERNAL_DECODER_LPCM || INTERNAL_DECODER_PS2AUDIO || INTERNAL_DECODER_REALAUDIO || INTERNAL_DECODER_PCM || INTERNAL_DECODER_AC3 || \
     INTERNAL_DECODER_AAC || INTERNAL_DECODER_ALAC || INTERNAL_DECODER_ALS || INTERNAL_DECODER_DTS || INTERNAL_DECODER_MPEGAUDIO ||       \
-    INTERNAL_DECODER_VORBIS || INTERNAL_DECODER_NELLYMOSER || INTERNAL_DECODER_AMR || INTERNAL_DECODER_ADPCM || INTERNAL_DECODER_FLAC)
+    INTERNAL_DECODER_VORBIS || INTERNAL_DECODER_NELLYMOSER || INTERNAL_DECODER_AMR || INTERNAL_DECODER_ADPCM || INTERNAL_DECODER_FLAC || \
+    INTERNAL_DECODER_OPUS)
 
 #define HAS_VIDEO_DECODERS \
     (INTERNAL_DECODER_MPEG1 || INTERNAL_DECODER_MPEG2 || INTERNAL_DECODER_REALVIDEO || INTERNAL_DECODER_H264 || INTERNAL_DECODER_HEVC || INTERNAL_DECODER_VC1 || \
