@@ -11,6 +11,7 @@ Legend:
 next version - not released yet
 ===============================
 + Add Indonesian and Punjabi translations
+* Use internal audio decoder by default for Opus decoding
 * Ticket #5450/#5479, Improved crash reporting dialog for better stability and user experience
 * Updated MediaInfoLib to v0.7.75
 * Updated LAV Filters to v0.65.0.26:
